--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 REACT_APP_GITHUB_URL="https://api.github.com"
-REACT_APP_GITHUB_FINDER_TOKEN="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"
+REACT_APP_GITHUB_FINDER_TOKEN="[INSERT_TOKEN_HERE]"
