--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 REACT_APP_GITHUB_URL="https://api.github.com"
-REACT_APP_GITHUB_FINDER_TOKEN="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"
+REACT_APP_GITHUB_FINDER_TOKEN="break_dancing"
